@@ -706,6 +706,19 @@
 ;;      done. This field follows the guidelines of
 ;;      <http://www.debian.org/doc/debian-policy/ch-relationships.html>.
 ;;
+;;     Description (required)
+;;
+;;      The first line of this field is a concise description that
+;;      fits on maximum line length of 80 characters; words
+;;      "Description: " included. The long description should explain
+;;      the essential M-x commands to use the package. Like mentioning
+;;      M-x foo-mode or saying: "With standard install the mode is
+;;      activated if you load file ending to *.xxx" etc. The details
+;;      of an extension are explained in the following paragraphs
+;;      which are separated from each other with a single dot(.) on
+;;      their own lines. The long description's paragraphs are
+;;      indented by one space.
+;;
 ;;     Depends (required)
 ;;
 ;;      List of dependencies in all lowercase: Emacs flavor and
@@ -751,19 +764,6 @@
 ;;                               Ignored. Has no effect.
 ;;
 ;;      See also section "Development notes: depends".
-;;
-;;     Description (required)
-;;
-;;      The first line of this field is a concise description that
-;;      fits on maximum line length of 80 characters; words
-;;      "Description: " included. The long description should explain
-;;      the essential M-x commands to use the package. Like mentioning
-;;      M-x foo-mode or saying: "With standard install the mode is
-;;      activated if you load file ending to *.xxx" etc. The details
-;;      of an extension are explained in the following paragraphs
-;;      which are separated from each other with a single dot(.) on
-;;      their own lines. The long description's paragraphs are
-;;      indented by one space.
 ;;
 ;;     Homepage
 ;;
